--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "mud"
 version = "0.1.0"
 edition = "2024"
 
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 bevy = "0.16.1"
 bevy_ratatui = { version = "0.9.2", default-features = true, features = [
